--- a/zzchat/0.1/zzchat.html
+++ b/zzchat/0.1/zzchat.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Chatbox forumvi</title>
-	<link rel="stylesheet" type="text/css" href="http://baivong.github.io/cdn/zzchat/0.1/chatbox.forumvi.min.css" />
+	<link rel="stylesheet" type="text/css" href="http://baivong.github.io/cdn/zzchat/0.1/zzchat.min.css" />
 </head>
 
 <body>
@@ -74,7 +74,7 @@
 	</audio>
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="http://baivong.github.io/cdn/zzchat/0.1/chatbox.forumvi.min.js"></script>
+	<script type="text/javascript" src="http://baivong.github.io/cdn/zzchat/0.1/zzchat.min.js"></script>
 </body>
 
 </html>
