updated zzCodeMirror css

--- a/imgur/upload.html
+++ b/imgur/upload.html
@@ -14,7 +14,7 @@
         <div id="img_preview" class="container clearfix">
             <div class="img_control">
                 <div id="img_choose_wrap" class="img_button">
-                    <input id="img_choose" type="file" multiple accept="image/png, image/jpeg, image/gif, image/bmp" />
+                    <input id="img_choose" type="file" multiple accept="image/*" />
                     <span>Chọn ảnh</span>
                 </div>
                 <button id="img_upload" class="img_button" disabled>Tải lên</button>
