--- a/imgur/upload.html
+++ b/imgur/upload.html
@@ -4,7 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <title>zzImgUr v2 by zzbaivong | devs.forumvi.com</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <style>
+    *{margin:0;padding:0}
+    #zzImgUr2,#zzImgUr2 *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}
+    #zzImgUr2{width:600px;margin:10px auto}
+    .img_control{text-align:right}
+    #img_choose_wrap,#img_reset{float:left}
+    .img_button{background:url(http://i39.servimg.com/u/f39/18/83/96/52/149.png) no-repeat 10px center #bc0fd8;height:40px;width:135px;cursor:pointer;overflow:hidden;position:relative;border:0 none;color:#FFF;padding-left:45px;text-align:left;font:18px/40px arial}
+    .img_button:hover{background-color:#444!important}
+    .img_button#img_upload{background-image:url(http://i39.servimg.com/u/f39/18/83/96/52/150.png);background-color:#007ED8}
+    .img_button#img_submit{background-image:url(http://i39.servimg.com/u/f39/18/83/96/52/146.png);background-color:#089061}
+    .img_button#img_reset{background-image:url(http://i39.servimg.com/u/f39/18/83/96/52/147.png);background-color:#c0392b}
+    #img_choose{z-index:10;opacity:0;font-size:300px;height:1000px;right:0;top:0;position:absolute;cursor:pointer}
+    .container{background:#FFF;padding:10px;margin:10px 0;border:2px solid #444}
+    #img_list{margin:0 -10px}
+    #img_list li{background:url(data:image/gif;base64,R0lGODlhCgAKAIAAAAAAAP///yH5BAEAAAAALAAAAAAKAAoAAAIRhB2ZhxoM3GMSykqd1VltzxQAOw==) repeat scroll #ddd;padding:10px;border:2px solid #CCC;list-style-type:none;position:relative;float:left;width:283px;height:200px;margin:10px 0 10px 10px;overflow:hidden}
+    #img_list li:hover{background:#FFF;border-color:#075BF8}
+    #img_list li:hover .img_close{opacity:1}
+    #img_list li:hover .img_details{bottom:5px}
+    #img_list li img{max-width:100%;height:100%;display:block;margin:0 auto}
+    #img_list li.loading{border-color:#FFF200}
+    #img_list li.error{border-color:#FF3535;opacity:.7}
+    #img_list li.success{border-color:#00C131}
+    #img_list li.ui-state-highlight{height:200px;background:#ff0;border:2px dashed red}
+    .img_details{height:50px;line-height:20px;padding:5px 10px;font-size:13px;background:#444;color:#FFF;position:absolute;left:0;right:0;bottom:-50px;-webkit-transition:bottom .3s;transition:bottom .3s}
+    .img_details input{border:1px solid #b0b0b0;width:100%}
+    .img_details a{color:#ff0;text-decoration:none;font-weight:700}
+    .img_details a:last-child{color:red;float:right}
+    .img_details a:hover{color:#FFF}
+    .img_progress_bar{position:absolute;bottom:0;left:0;right:0;height:5px;padding:1px;background:#f9f9f9;z-index:50}
+    .img_progress_bar .img_progress{height:3px;width:0;background:#FF4848;-webkit-transition:width .3s;transition:width .3s}
+    .img_close:hover{cursor:pointer;background-color:#666}
+    .img_close{text-indent:-9999px;position:absolute;top:5px;right:5px;width:30px;height:30px;background:url(http://i39.servimg.com/u/f39/18/83/96/52/148.png) no-repeat center center #fff;border-radius:50%;opacity:0;-webkit-transition:all .3s;transition:all .3s}
+    .img_close:hover{cursor:pointer;background-color:#666}
+    .clearfix:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0}
+    #img_data{display:none}
+    #img_mess{width:100%;resize:vertical;min-height:100px;margin:10px 0;border:1px solid #b0b0b0}
+    #img_title{padding:6px 10px;width:100%;border:1px solid #b0b0b0}
+    .ui-helper-hidden{display:none}
+    .ui-helper-hidden-accessible{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}
+    .ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none}
+    .ui-helper-clearfix:before,.ui-helper-clearfix:after{content:"";display:table;border-collapse:collapse}
+    .ui-helper-clearfix:after{clear:both}
+    .ui-helper-clearfix{min-height:0}
+    .ui-helper-zfix{width:100%;height:100%;top:0;left:0;position:absolute;opacity:0;filter:alpha(opacity=0)}
+    .ui-front{z-index:100}
+    .ui-state-disabled{cursor:default!important}
+    .ui-icon{display:block;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat}
+    .ui-widget-overlay{position:fixed;top:0;left:0;width:100%;height:100%}
+    .ui-sortable-handle{-ms-touch-action:none;touch-action:none}
+    .ui-sortable-helper{cursor:move}
+    </style>
 </head>
 
 <body>
@@ -24,15 +74,7 @@
         <form id="img_data" action="/post" method="post" name="post" class="container">
             <div>
                 <input id="img_title" name="subject" value="" maxlength="255" placeholder="Nhập tiêu đề cho bài đăng" onkeypress="if (event.keyCode==13){return false}" type="text" required />
-                <select name="f" id="img_type">
-                    <option value="115">Ảnh Vui</option>
-                    <option value="73">Hình Nền Máy Tính</option>
-                    <option value="98">Cosplay</option>
-                    <option value="57">Girl xinh - Kute - Sao</option>
-                    <option value="55">Ảnh Girl Bikini - Sexy</option>
-                    <option value="100">Ảnh Bìa Facebook</option>
-                    <option value="74">Ảnh Đẹp Khác</option>
-                </select>
+                <input id="img_type" type="hidden" name="f" value="" />
                 <input type="hidden" name="mode" value="newtopic" />
             </div>
             <div>
